--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -4,6 +4,14 @@ html {
 }
 
 /* Charts */
+#chart {
+    width: 50%;
+    height: 200px;
+}
+#chart2 {
+    width: 50%;
+    height: 200px;
+}
 svg {
 	background-color: #fafafa;
 	border: 1px solid #eeeeee;
