--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -5,9 +5,9 @@ html {
 
 /* Charts */
 #chart {
-    width: 99%;
-    min-width: 600px;
-    height: 400px;
+    width: 50%;
+    min-width: 300px;
+    height: 300px;
 }
 
 svg {
@@ -105,30 +105,18 @@ svg {
 }
 
 /* Tooltip */
-#tooltip {
-        position: absolute;
-        width: 200px;
-        height: auto;
-        padding: 10px;
-        background-color: white;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 10px;
-        -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        pointer-events: none;
-}
+div.tooltip {
+    position: absolute;
+    text-align: left;
+    width: 60px;
+    height: 28px;
+    padding: 2px;
+    font: 9px sans-serif;
+    background: #fafafa;
+    border: 1px solid #eeeeee;
+    border-radius: 3px;
+    pointer-events: none;
+    margin-left: 12px;
 
-#tooltip.hidden {
-        display: none;
 }
-
-#tooltip p {
-        margin: 0;
-        font-family: sans-serif;
-        font-size: 16px;
-        line-height: 20px;
-}
-
 
