--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -5,9 +5,11 @@ html {
 
 /* Charts */
 #chart {
-    width: 99%;
+    height: 80%;
     min-width: 300px;
-    height: 400px;
+    min-height: 300px;
+    position: fixed;
+    width: 99%;
 }
 
 svg {
