--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -5,7 +5,7 @@ html {
 
 /* Charts */
 #chart {
-    height: 80%;
+    height: 50%;
     min-width: 300px;
     min-height: 300px;
     position: fixed;
@@ -172,10 +172,19 @@ svg {
 }
 
 .tooltip .serie {
+    color: #262c39;
     float: left;
     margin-left: 5px;
 }
 
 .tooltip .value {
+    color: #262c39;
     float: right;
+    margin-right: 30px;
+}
+
+.tooltip .percent {
+    color: #262c39;
+    float: right;
+    margin-left: 5px;
 }
