--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -106,6 +106,8 @@ svg {
 /* Pie Chart */
 .slice {
     opacity: 0.8;
+    stroke: #fff; /* separates the bars with a white stroke */
+    stroke-width:1px;
 }
 .slice text {
     fill: #fff;
