--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -31,7 +31,7 @@ svg {
 }
 
 .titlearea .subtitle {
-    fill: #dddddd;
+    fill: #878787;
     font-size: 9px;
     font-weight: normal;
     text-transform: none;
