--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -5,16 +5,17 @@ html {
 
 /* Charts */
 #chart {
-    height: 50%;
+    height: 300px;
     min-width: 300px;
     min-height: 300px;
     position: fixed;
-    width: 90%;
+    width: 600px;
 }
 
 svg {
 	background-color: #fafafa;
-	border: 1px solid #eeeeee;
+    box-shadow: 1px 1px 2px #ddd;
+    border: 1px solid #eeeeee;
 	border-radius:3px;
     margin-left: 12px;
 }
