--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -9,7 +9,7 @@ html {
     min-width: 300px;
     min-height: 300px;
     position: fixed;
-    width: 90%;
+    width: 50%;
 }
 
 svg {
@@ -39,7 +39,6 @@ svg {
 }
 
 /* Legend */
-
 .legend .item {
 	font-family: Arial, sans-serif;
 	font-size: 9px;
@@ -78,10 +77,16 @@ svg {
 	shape-rendering: crispEdges;
 }
 /* Line Chart */
+.series .label {
+    fill: #000;
+    font-size: 9px;
+}
+
 .series .line {
     opacity: 1;
 	stroke-width:2px;
 }
+
 .series .line:hover {
     opacity: 0.6;
 }
@@ -93,15 +98,6 @@ svg {
 	stroke-width:2px;
     fill: #fff;
 }
-/* Area Chart */
-.series .area {
-	fill: steelblue;
-}
-
-.series .label {
-    fill: #000;
-    font-size: 9px;
-}
 
 /* Bar Chart */
 .bar {
@@ -109,6 +105,7 @@ svg {
     stroke: #fff;  /* separates the bars with a white stroke */
     stroke-width:1px;
 }
+
 .bar:hover {
 	opacity: 0.6;
     stroke: #fff; /* separates the bars with a white stroke */
@@ -121,11 +118,13 @@ svg {
     stroke: #fff; /* separates the bars with a white stroke */
     stroke-width:1px;
 }
+
 .slice text {
-    fill: #fff;
-    font-size: 9px;
-    opacity:0.8;
+    opacity: 1;
+    stroke: #fff;
+    stroke-width: 0px;
 }
+
 .slice:hover {
     opacity: 0.6;
 }
