--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -5,11 +5,11 @@ html {
 
 /* Charts */
 #chart {
-    height: 300px;
+    height: 80%;
     min-width: 300px;
     min-height: 300px;
     position: fixed;
-    width: 700px;
+    width: 80%;
 }
 
 svg {
