fixed issue when adding multiple charts to the same page

--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -158,7 +158,7 @@ html {
 
 /* Tooltip */
 .tooltip {
-    position: absolute;
+    position: relative;
     text-align: left;
     padding: 20px;
     font: 9px Arial;
