--- a/src/css/d3charts.css
+++ b/src/css/d3charts.css
@@ -8,11 +8,11 @@ html {
     height: 80%;
     min-width: 300px;
     min-height: 300px;
-    position: fixed;
+    position: relative;
     width: 80%;
 }
 
-.chart {
+.svg_chart {
 	background-color: #fafafa;
     box-shadow: 1px 1px 2px #ddd;
     border: 1px solid #eeeeee;
@@ -158,7 +158,7 @@ html {
 
 /* Tooltip */
 .tooltip {
-    position: relative;
+    position: absolute;
     text-align: left;
     padding: 20px;
     font: 9px Arial;
@@ -173,7 +173,7 @@ html {
     content: " ";
     position: absolute;
     top: -10px;  /* At the top of the tooltip */
-    left: 20%;
+    left: 50px;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
@@ -184,7 +184,7 @@ html {
     content: " ";
     position: absolute;
     top: -9px;  /* At the top of the tooltip */
-    left: 20%;
+    left: 50px;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
